Fixed wrong color

--- a/src/pages/Register.css
+++ b/src/pages/Register.css
@@ -86,7 +86,7 @@ select.textInput {
 
 .textareaRow {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   margin-top: 16px;
   width: 340px;
 }
